allow running with neo4j or in memory for some tests, rename DualTest to MultiMode